--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -64,20 +64,20 @@ img {
 
 
 :root {
-  --ifm-color-primary: #d4651b;
-  --ifm-color-primary-dark: #949209;
-  --ifm-color-primary-darker: #6d6807;
-  --ifm-color-primary-darkest: #332b04;
-  --ifm-color-primary-light: #ffaa55;
-  --ifm-color-primary-lighter: #fbba7a;
-  --ifm-color-primary-lightest: #fbcfa4;
+  --ifm-color-primary: #f08000;
+  --ifm-color-primary-dark: #8b4b03;
+  --ifm-color-primary-darker: #b36002;
+  --ifm-color-primary-darkest: #f08000;
+  --ifm-color-primary-light: #e8b983;
+  --ifm-color-primary-lighter: #f2d8bb;
+  --ifm-color-primary-lightest: #f7e9d9;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #e0ad14;
+  --ifm-color-primary: #f08000;
   --ifm-color-primary-dark: #7e690c;
   --ifm-color-primary-darker: #6d5e09;
   --ifm-color-primary-darkest: #3a2805;
